--- a/clone_zoom/src/views/home.pug
+++ b/clone_zoom/src/views/home.pug
@@ -10,11 +10,24 @@ html(lang="en")
         header 
             h1 It works!
         main
-            form#nick
-                input(type="text" , placeholder="choose a nickname" , required)
-                button Save
-            ul
-            form#message
-                input(type="text" , placeholder="write a msg" , required)
-                button Send
+            //- //- Socket.io
+            div#welcome
+                form
+                    input(placeholder="room name" , required , type="text")
+                    button Join / Create Room
+            div#room
+                h3
+                ul 
+                form 
+                    input(placeholder="message" , required , type="text")
+                    button Send
+            //- //- WebSocket Page
+            //- form#nick
+            //-     input(type="text" , placeholder="choose a nickname" , required)
+            //-     button Save
+            //- ul
+            //- form#message
+            //-     input(type="text" , placeholder="write a msg" , required)
+            //-     button Send
+        script(src="/socket.io/socket.io.js")
         script(src="/public/js/app.js")
