--- a/clone_zoom/src/views/home.pug
+++ b/clone_zoom/src/views/home.pug
@@ -2,25 +2,41 @@ doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
+        meta(http-equiv="X-UA-Compatible", content="IE=edge") 
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Noom
         link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
         header 
-            h1 It works!
+            h1 CodingHub
         main
-            //- //- Socket.io
-            div#welcome
-                form
-                    input(placeholder="room name" , required , type="text")
-                    button Join / Create Room
-            div#room
-                h3
-                ul 
+            div#welcome 
                 form 
-                    input(placeholder="message" , required , type="text")
-                    button Send
+                    input(placeholder="room name" , required , type="text")
+                    button Enter room
+            div#call
+                div#myStream
+                    video#myFace(autoplay , playsinline , width="400" , height="400" )
+                    button#mute Mute
+                    button#camera Turn Camera Off
+                    select#cameras
+                    option(value="device") Face Camera
+            //- //- //- Socket.io
+            //- div#welcome
+            //-     form
+            //-         input(placeholder="room name" , required , type="text")
+            //-         button Join / Create Room
+            //-     h4 Open Rooms
+            //-     ul
+            //- div#room
+            //-     h3
+            //-     ul 
+            //-     form#name
+            //-         input(placeholder="nickname" , required , type="text")
+            //-         button Save
+            //-     form#msg 
+            //-         input(placeholder="message" , required , type="text")
+            //-         button Send
             //- //- WebSocket Page
             //- form#nick
             //-     input(type="text" , placeholder="choose a nickname" , required)
