make WebRTC video

--- a/clone_zoom/src/views/home.pug
+++ b/clone_zoom/src/views/home.pug
@@ -20,7 +20,8 @@ html(lang="en")
                     button#mute Mute
                     button#camera Turn Camera Off
                     select#cameras
-                    option(value="device") Face Camera
+                    //- option(value="device")
+                video#peersFace(autoplay , playsinline , width="400" , height="400" )
             //- //- //- Socket.io
             //- div#welcome
             //-     form
